--- a/index.html
+++ b/index.html
@@ -1,120 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Jacob Rachal, 7/16/2018 -->
-	<title>StartUP Technologies</title>
-    <!-- link google fonts here -->
-		<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
-    <!-- link all the css here -->
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/all.css">
-		<link rel="stylesheet" href="css/styles.css">
-</head>
-<body>
-		<nav class="navbar navbar-default">
-			<!-- <nav class="navbar navbar-invert"> -->
-			<div class="container">
-				<!-- changed container-fluid to container -->
-				<!-- Brand and toggle get grouped for better mobile display -->
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-						<!-- data-target targets the following major div class -->
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<!-- <a class="navbar-brand" href="#">Brand</a> -->
-					<a class="navbar-brand" href="#">StartUP</a>
-				</div>
-
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<!-- <ul class="nav navbar-nav">
-						<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-						<li><a href="#">Link</a></li> -->
-						<!-- <li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-							 <ul class="dropdown-menu">
-								<li><a href="#">Action</a></li>
-								<li><a href="#">Another action</a></li>
-								<li><a href="#">Something else here</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a href="#">Separated link</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a href="#">One more separated link</a></li>
-							</ul>
-					</li> -->
-						<!-- Can actually delete the dropdown menu. -->
-					<!-- </ul> -->
-					<!-- Getting rid of the entire left part UL -->
-
-					<!-- <form class="navbar-form navbar-left">
-						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Search">
+		<head>
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<!-- Jacob Rachal, 7/16/2018 -->
+			<title>StartUP Technologies</title>
+		    <!-- link google fonts here -->
+				<link href="https://fonts.googleapis.com/css?family=Oswald:700" rel="stylesheet">
+				<link href="https://fonts.googleapis.com/css?family=Montserrat:800" rel="stylesheet">
+				<link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+		    <!-- link all the css here -->
+				<link rel="stylesheet" href="css/bootstrap.min.css">
+				<link rel="stylesheet" href="css/all.css">
+				<link rel="stylesheet" href="css/styles.css">
+		</head>
+		<body>
+				<nav class="navbar navbar-default">
+					<!-- <nav class="navbar navbar-invert"> -->
+					<div class="container">
+						<!-- changed container-fluid to container -->
+						<!-- Brand and toggle get grouped for better mobile display -->
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+								<!-- data-target targets the following major div class -->
+								<span class="sr-only">Toggle navigation</span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<!-- <a class="navbar-brand" href="#">Brand</a> -->
+							<a class="navbar-brand" href="#"><h1>StartUP</h1></a>
 						</div>
-						<button type="submit" class="btn btn-default">Submit</button>
-					</form> -->
-					<!-- Removing the form. -->
 
-					<ul class="nav navbar-nav navbar-right">
-						<!-- <li><a href="#">Link</a></li> -->
-						<!-- This bit is commented out because we don't need it just yet -->
+						<!-- Collect the nav links, forms, and other content for toggling -->
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<!-- <ul class="nav navbar-nav">
+								<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+								<li><a href="#">Link</a></li> -->
+								<!-- <li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+									 <ul class="dropdown-menu">
+										<li><a href="#">Action</a></li>
+										<li><a href="#">Another action</a></li>
+										<li><a href="#">Something else here</a></li>
+										<li role="separator" class="divider"></li>
+										<li><a href="#">Separated link</a></li>
+										<li role="separator" class="divider"></li>
+										<li><a href="#">One more separated link</a></li>
+									</ul>
+							</li> -->
+								<!-- Can actually delete the dropdown menu. -->
+							<!-- </ul> -->
+							<!-- Getting rid of the entire left part UL -->
+
+							<!-- <form class="navbar-form navbar-left">
+								<div class="form-group">
+									<input type="text" class="form-control" placeholder="Search">
+								</div>
+								<button type="submit" class="btn btn-default">Submit</button>
+							</form> -->
+							<!-- Removing the form. -->
+
+							<ul class="nav navbar-nav navbar-right">
+								<!-- <li><a href="#">Link</a></li> -->
+								<!-- This bit is commented out because we don't need it just yet -->
 
 
-						<!-- <li class="dropdown">
-							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-							<ul class="dropdown-menu">
-								<li><a href="#">Action</a></li>
-								<li><a href="#">Another action</a></li>
-								<li><a href="#">Something else here</a></li>
-								<li role="separator" class="divider"></li>
-								<li><a href="#">Separated link</a></li>
+								<!-- <li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Action</a></li>
+										<li><a href="#">Another action</a></li>
+										<li><a href="#">Something else here</a></li>
+										<li role="separator" class="divider"></li>
+										<li><a href="#">Separated link</a></li>
+									</ul>
+								</li> -->
 							</ul>
-						</li> -->
-					</ul>
+						</div>
+						<!-- /.navbar-collapse -->
+					</div><!-- /.container-fluid -->
+				</nav>
+
+
+				<div class="jumbotron home-jumbo">
+				  <div class="container">
+						<div class="row">
+							<div class="col-md-7 col-md-push-5">
+									<img src="img/construction.png" alt="" class="img-responsive">
+									<!-- img-responsive resizes the image according to the viewport size. -->
+							</div>
+							<div class="col-md-5 col-md-pull-7 home-jumbotron-left color-text-white">
+								<h2><!-- <h2 class="color-text-white"> -->
+									 Our community is Currently under construction, come back soon.
+								</h2>
+								<p>
+									<!-- <p class="color-text-white"> -->
+									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quidem sapiente tempore quos, blanditiis eveniet facere delectus officiis iusto suscipit aspernatur, natus, totam animi possimus nemo architecto doloremque tempora doloribus.
+								</p>
+							</div>
+
+						</div>
+				    <!-- ... -->
+				  </div>
 				</div>
-				<!-- /.navbar-collapse -->
-			</div><!-- /.container-fluid -->
-		</nav>
 
-
-		<div class="jumbotron">
-		  <div class="container">
-				<div class="row">
-					<div class="col-md-5">
-						<h2>
-							 Our community is Currently under construction, come back soon.
-						</h2>
-						<p>
-							Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quidem sapiente tempore quos, blanditiis eveniet facere delectus officiis iusto suscipit aspernatur, natus, totam animi possimus nemo architecto doloremque tempora doloribus.
-						</p>
+				<section class="footer-section">
+					<div class="container footer-social">
+						<div class="row">
+							<div class="col-md-4 col-md-offset-8">
+								<h4 class="text-uppercase">Follow us on social media</h4>
+								<!-- THe icons we need -->
+								<a href="#">
+									<i class="fab fa-github siz"></i>
+								</a>
+								<a href="#">
+									<i class="fab fa-twitter siz"></i>
+								</a>
+								<a href="#">
+									<i class="fab fa-facebook-f siz"></i>
+								</a>
+								<a href="#">
+									<i class="fab fa-linkedin siz"></i>
+								</a>
+							</div>
+						</div>
+						<!-- End of footer row -->
 					</div>
-					<div class="col-md-7">
-							<img src="img/construction.png" alt="" class="img-responsive">
-							<!-- img-responsive resizes the image according to the viewport size. -->
-					</div>
-				</div>
-		    <!-- ... -->
-		  </div>
-		</div>
+					<!-- ./container -->
+				</section>
 
-		<section>
-			<div class="container">
-				<div class="row">
-					<div class="col-md-4 col-md-offset-8">
-						<h4>Follow us on Social Media</h4>
-					</div>
-				</div>
-			</div>
-		</section>
-
-    <!-- link all the scripts here -->
-		<script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
-		<script src="js/bootstrap.min.js" charset="utf-8"></script>
-</body>
+		    <!-- link all the scripts here -->
+				<script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
+				<script src="js/bootstrap.min.js" charset="utf-8"></script>
+		</body>
 </html>
