--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
 							<ul class="nav navbar-nav navbar-right">
 								<!-- <li><a href="#">Link</a></li> -->
 								<!-- This bit is commented out because we don't need it just yet -->
-
-
 								<!-- <li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 									<ul class="dropdown-menu">
@@ -81,8 +79,9 @@
 						<!-- /.navbar-collapse -->
 					</div><!-- /.container-fluid -->
 				</nav>
+				<!-- END OF NAV BAR. -->
 
-
+				<!-- BEGINNING OF JUMBOTRON (aka: LANDING PAGE BANNER, the first thing people see.) -->
 				<div class="jumbotron home-jumbo">
 				  <div class="container">
 						<div class="row">
@@ -104,13 +103,19 @@
 				    <!-- ... -->
 				  </div>
 				</div>
+				<!-- END OF JUMBOTRON (...who came up with these names?!?) -->
 
+				<!-- BELOW THE SCROLL things / Body containers -->
+				<!-- END OF BODY  -->
+
+
+				<!-- BEGINNING OF FOOTER -->
 				<section class="footer-section">
 					<div class="container footer-social">
 						<div class="row">
 							<div class="col-md-4 col-md-offset-8">
 								<h4 class="text-uppercase">Follow us on social media</h4>
-								<!-- THe icons we need -->
+								<!-- The icons we need -->
 								<a href="#">
 									<i class="fab fa-github siz"></i>
 								</a>
@@ -123,12 +128,14 @@
 								<a href="#">
 									<i class="fab fa-linkedin siz"></i>
 								</a>
+								<!-- note: I added the class "siz" to madify the icon sizes in styles.css instead of reusing fab due to how it is not a good idea to be redeclaring a class like that. Who knows, we might want to use other icons that are not sized like these are. -->
 							</div>
 						</div>
 						<!-- End of footer row -->
 					</div>
 					<!-- ./container -->
 				</section>
+				<!-- END of FOOTER Section -->
 
 		    <!-- link all the scripts here -->
 				<script src="js/jquery-3.3.1.min.js" charset="utf-8"></script>
