--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 							<!-- <ul class="nav navbar-nav">
 								<li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
 								<li><a href="#">Link</a></li> -->
-								<!-- <li class="dropdown">
+								 <!-- <li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
 									 <ul class="dropdown-menu">
 										<li><a href="#">Action</a></li>
@@ -62,7 +62,8 @@
 							<!-- Removing the form. -->
 
 							<ul class="nav navbar-nav navbar-right">
-								<!-- <li><a href="#">Link</a></li> -->
+								<li><a href="index.html">Home</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
 								<!-- This bit is commented out because we don't need it just yet -->
 								<!-- <li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
