--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 				  <div class="container">
 						<div class="row">
 							<div class="col-md-7 col-md-push-5">
-									<img src="img/construction.png" alt="" class="img-responsive">
+									<!-- <img src="img/construction.png" alt="" class="img-responsive"> -->
+									<img src="img/city1.png" alt="" class="img-responsive">
 									<!-- img-responsive resizes the image according to the viewport size. -->
 							</div>
 							<div class="col-md-5 col-md-pull-7 home-jumbotron-left color-text-white">
@@ -98,6 +99,7 @@
 									<!-- <p class="color-text-white"> -->
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci quidem sapiente tempore quos, blanditiis eveniet facere delectus officiis iusto suscipit aspernatur, natus, totam animi possimus nemo architecto doloremque tempora doloribus.
 								</p>
+								<a class="btn btn-primary btn-lg" href="#" role="button">See Features</a>
 							</div>
 
 						</div>
@@ -107,7 +109,49 @@
 				<!-- END OF JUMBOTRON (...who came up with these names?!?) -->
 
 				<!-- BELOW THE SCROLL things / Body containers -->
+				<div class="dual-row-body color-text-white">
+					<div class="container">
+						<div class="row">
+							<div class="col-lg-12">
+								<h2>StartUp technology is out of this world.</h2>
+								<p class="squeezeme">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius temporibus esse, vero, doloremque est nihil similique ullam dolorem repellendus neque amet? Aspernatur, minus! Adipisci velit quidem earum voluptatibus asperiores sed.</p>
+								<a class="btn btn-primary primary" href="#" role="button">Purchase Now</a>
+							</div>
+							<!-- <div></div>
+							<div></div> -->
+						</div>
+						<div class="row dos">
+							<div class="col-sm-4">
+								<!-- speedy icon for "it's fast" -->
+								<i class="fas fa-angle-double-right fa-2x"></i>
+								<h4>It's fast</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos tenetur vero inventore at magnam illo accusamus, commodi, quaerat corporis temporibus vitae aspernatur aperiam necessitatibus optio voluptatem neque hic mollitia velit.</p>
+								<!-- this paragraph needs to be teeny tiny. -->
+							</div>
+							<div class="col-sm-4">
+								<!-- feather/leaf icon for "it's lean" -->
+								<i class="fas fa-feather-alt fa-2x"></i>
+								<h4>It's Lean</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ea beatae fugit dolore voluptates nesciunt provident unde iste laboriosam quaerat animi molestias, dicta, placeat, porro similique nostrum ipsam dignissimos cumque.</p>
+								<!-- this paragraph needs to be teeny tiny. -->
+							</div>
+							<div class="col-sm-4">
+								<!-- Rocket ship icon for "it's robust" -->
+								<i class="fas fa-rocket fa-2x"></i>
+								<h4>It's Robust</h4>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est nostrum harum, perferendis debitis eius deserunt iste eum sunt molestiae, ea velit cumque rem magni alias corporis non dolores modi nulla.</p>
+								<!-- this paragraph needs to be teeny tiny. -->
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- End of dual-row container -->
+
+				<!-- Beginning of carousel container -->
+
+
 				<!-- END OF BODY  -->
+
 
 
 				<!-- BEGINNING OF FOOTER -->
