--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				<div class="dual-row-body color-text-white">
 					<div class="container">
 						<div class="row">
-							<div class="col-lg-12">
+							<div class="col-md-12">
 								<h2>StartUp technology is out of this world.</h2>
 								<p class="squeezeme">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius temporibus esse, vero, doloremque est nihil similique ullam dolorem repellendus neque amet? Aspernatur, minus! Adipisci velit quidem earum voluptatibus asperiores sed.</p>
 								<a class="btn btn-primary primary" href="#" role="button">Purchase Now</a>
@@ -121,21 +121,21 @@
 							<div></div> -->
 						</div>
 						<div class="row dos">
-							<div class="col-sm-4">
+							<div class="col-md-4">
 								<!-- speedy icon for "it's fast" -->
 								<i class="fas fa-angle-double-right fa-2x"></i>
 								<h4>It's fast</h4>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos tenetur vero inventore at magnam illo accusamus, commodi, quaerat corporis temporibus vitae aspernatur aperiam necessitatibus optio voluptatem neque hic mollitia velit.</p>
 								<!-- this paragraph needs to be teeny tiny. -->
 							</div>
-							<div class="col-sm-4">
+							<div class="col-md-4">
 								<!-- feather/leaf icon for "it's lean" -->
 								<i class="fas fa-feather-alt fa-2x"></i>
 								<h4>It's Lean</h4>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque ea beatae fugit dolore voluptates nesciunt provident unde iste laboriosam quaerat animi molestias, dicta, placeat, porro similique nostrum ipsam dignissimos cumque.</p>
 								<!-- this paragraph needs to be teeny tiny. -->
 							</div>
-							<div class="col-sm-4">
+							<div class="col-md-4">
 								<!-- Rocket ship icon for "it's robust" -->
 								<i class="fas fa-rocket fa-2x"></i>
 								<h4>It's Robust</h4>
@@ -148,6 +148,50 @@
 				<!-- End of dual-row container -->
 
 				<!-- Beginning of carousel container -->
+				<section class="round-n-round">
+					<!-- AKA the quote section -->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
+                    <div id="carousel-example-generic" class="carousel slide quote-carousel" data-ride="carousel">
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="1" class=""></li>
+                         </ol>
+
+                        <!-- Wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <blockquote>
+                                <h3>Amazing</h3>
+                                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                                </blockquote>
+                            </div>
+                            <div class="item">
+                                <blockquote>
+                                <h3>Amazing</h3>
+                                <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <footer>Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+				<!-- <div class="round-n-round"> -->
+					<div class="container">
+						<div class="row">
+							<div classs="col-md-8 col-md-offset-2">
+								<!-- the actual carousel with header, text, and author signature. -->
+							</div>
+						</div>
+					</div>
+				</div>
+				<!-- end of carousel container. -->
 
 
 				<!-- END OF BODY  -->
