--- a/contact.html
+++ b/contact.html
@@ -37,8 +37,16 @@
 
 
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="contact.html">Contact Us</a></li>
+								<li>
+                  <a href="index.html">
+                    <span class="nav-main-link">Home</span>
+                  </a>
+                </li>
+								<li>
+                  <a href="contact.html">
+                    <span class="nav-main-link active-link">Contact Us</span>
+                  </a>
+                </li>
 							</ul>
 						</div>
 						<!-- /.navbar-collapse -->
@@ -52,14 +60,24 @@
           <div class="container">
             <!-- pseudo-element 'Before' goes on here -->
             <div class="row">
-              <div class="col-md-6">
-                <!-- Google map of Bitwise South Stadium, Fresno -->
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.604240146298!2d-119.78796568471212!3d36.732064979962736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise+Industries!5e0!3m2!1sen!2sus!4v1532057114953" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-                <!-- If set width to 100%, same as width:600. -->
-              </div>
-              <div class="col-md-6">
+              <div class="col-md-6 col-md-push-6">
                 <!-- Other contact things. -->
+                    <h2 class="color-text-primary">StartUP</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci minima eligendi ex incidunt explicabo dolore laboriosam optio atque sit unde. Debitis sit nemo consequuntur laudantium at voluptatem, natus dignissimos omnis!</p>
+
+                    <ul class="list-group contact-list">
+                      <li class="list-group-item"><strong>Sales:</strong> sales@startup.com</li>
+                      <li class="list-group-item"><strong>Marketing:</strong> marketing@startup.com</li>
+                      <li class="list-group-item"><strong>General:</strong> hello@startup.com</li>
+                    </ul>
               </div>
+              <div class="col-md-6 col-md-pull-6">
+                <!-- Google map of Bitwise South Stadium, Fresno -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3197.604240146298!2d-119.78796568471212!3d36.732064979962736!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809460a5cfdf4b6b%3A0xab092ce50c284a0a!2sBitwise+Industries!5e0!3m2!1sen!2sus!4v1532057114953" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <!-- If set width to 100%, same as width:600. -->
+                <!-- Huh. Interesting note, when width is set to 100%, the map doesn't overlap the contact info. Nice! -->
+              </div>
+
             </div>
           </div>
         </section>
@@ -77,7 +95,7 @@
 							<div class="col-md-4 col-md-offset-8">
 								<h4 class="text-uppercase">Follow us on social media</h4>
 								<!-- The icons we need -->
-								<a href="#">
+								<a href="https://github.com/jacob-rachal">
 									<i class="fab fa-github siz"></i>
 								</a>
 								<a href="#">
