--- a/index.html
+++ b/index.html
@@ -62,8 +62,16 @@
 							<!-- Removing the form. -->
 
 							<ul class="nav navbar-nav navbar-right">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="contact.html">Contact Us</a></li>
+								<li>
+                  <a href="index.html">
+                    <span class="nav-main-link active-link">Home</span>
+                  </a>
+                </li>
+								<li>
+                  <a href="contact.html">
+                    <span class="nav-main-link">Contact Us</span>
+                  </a>
+                </li>
 								<!-- This bit is commented out because we don't need it just yet -->
 								<!-- <li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
@@ -88,12 +96,12 @@
 						<div class="row">
 							<div class="col-md-7 col-md-push-5">
 									<!-- <img src="img/construction.png" alt="" class="img-responsive"> -->
-									<img src="img/city1.png" alt="" class="img-responsive">
+									<img src="img/city1.png" alt="" class="img-responsive intro-img">
 									<!-- img-responsive resizes the image according to the viewport size. -->
 							</div>
 							<div class="col-md-5 col-md-pull-7 home-jumbotron-left color-text-white">
 								<h2><!-- <h2 class="color-text-white"> -->
-									 Our community is Currently under construction, come back soon.
+									 Creating a smarter community today.
 								</h2>
 								<p>
 									<!-- <p class="color-text-white"> -->
@@ -112,10 +120,12 @@
 				<div class="dual-row-body color-text-white">
 					<div class="container">
 						<div class="row">
-							<div class="col-md-12">
+							<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 text-center color-text-white second-content">
+								<!-- col-md-12 -->
 								<h2>StartUp technology is out of this world.</h2>
 								<p class="squeezeme">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius temporibus esse, vero, doloremque est nihil similique ullam dolorem repellendus neque amet? Aspernatur, minus! Adipisci velit quidem earum voluptatibus asperiores sed.</p>
-								<a class="btn btn-primary primary" href="#" role="button">Purchase Now</a>
+								<a class="btn btn-lg btn-ghost-pink" href="#" role="button">Purchase Now</a>
+								<!-- original button classes: "btn btn-primary primary" -->
 							</div>
 							<!-- <div></div>
 							<div></div> -->
@@ -205,7 +215,7 @@
 							<div class="col-md-4 col-md-offset-8">
 								<h4 class="text-uppercase">Follow us on social media</h4>
 								<!-- The icons we need -->
-								<a href="#">
+								<a href="https://github.com/jacob-rachal">
 									<i class="fab fa-github siz"></i>
 								</a>
 								<a href="#">
